2006-06-27  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (_inspect, _ofind) Apply David Huard's 
	patch for displaying the correct docstring for 'property' 
	attributes.

2006-06-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Put the documentation of the keyboard
	commands into the methods implementing them.

2006-06-22  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython.el (ipython-indentation-hook): cleanup patch, submitted
	by Kov Chai <tchaikov-AT-gmail.com>.  He notes that the original
	autoindent support was authored by Jin Liu.

2006-06-22  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Replace the plain dictionaries used
	for keymaps with a custom class that simplifies handling.

2006-06-19  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: ibrowse now properly handles terminal
	resizing. This requires Python 2.5 to work.

2006-06-16  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Add two new commands to
	ibrowse: "hideattr" (mapped to "h") hides the attribute under
	the cursor. "unhiderattrs" (mapped to "H") reveals all hidden
	attributes again. Remapped the help command to "?". Display
	keycodes in the range 0x01-0x1F as CTRL-xx. Add CTRL-a and CTRL-e
	as keys for the "home" and "end" commands. Add three new commands
	to the input mode for "find" and friends: "delend" (CTRL-K)
	deletes to the end of line. "incsearchup" searches upwards in the
	command history for an input that starts with the text before the cursor.
	"incsearchdown" does the same downwards. Removed a bogus mapping of
	the x key to "delete".

2006-06-15  Ville Vainio  <vivainio@gmail.com>

	* iplib.py, hooks.py: Added new generate_prompt hook that can be
	used to create prompts dynamically, instead of the "old" way of
	assigning "magic" strings to prompt_in1 and prompt_in2. The old
	way still works (it's invoked by the default hook), of course.
	